# recog

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: file.h  image.h  images_file.h  imagesfile.h  labels_file.h  util.h
src/: file.cpp  image.cpp  images_file.cpp  imagesfile.cpp  labels_file.cpp  main.cam.cpp  main.cpp  main.learn.cpp  util.cpp
